--- a/crontab/Dockerfile
+++ b/crontab/Dockerfile
@@ -4,4 +4,8 @@ FROM alpine
 COPY crontab.prod /crontab.prod
 COPY start.sh /start.sh
 
+#Install Packages
+RUN apk update
+RUN apk add rsync
+
 CMD ["sh", "/start.sh"]
