--- a/crontab/Dockerfile
+++ b/crontab/Dockerfile
@@ -3,6 +3,7 @@ FROM alpine
 #Copy files
 COPY crontab.prod /crontab.prod
 COPY start.sh /start.sh
+COPY syncdirs.sh /syncdirs.sh
 
 #Install Packages
 RUN apk update
