--- a/crontab/docker-compose.yml
+++ b/crontab/docker-compose.yml
@@ -8,7 +8,7 @@ volumes:
 
 services:
   backup:
-    image: urdaalex/crontab-sync
+    image: urdaalex/crontab-rsync
 
     volumes:
       - home_backups:/mnt/home_backup_files
